2001-08-11  Erez Zadok  <ezk@a-linux64.fsl.cs.sunysb.edu>

	* amq/amq.c (show_mti): print full four digits for year, and print
	it in MM/DD/YYYY format, not in YY/MM/DD format.

2001-08-11  Ion Badulescu  <lionut@gonzales.badula.org>

	* conf/autofs/autofs_solaris_v2_v3.c (autofs_lookup_2_req):
	initial attempt to do something useful -- but commented out for now
	(autofs_link_mount): create an action structure with a link
	request and pass it up
	(autofs_mount_2_req): pass the link request to the kernel
	(autofs_free_data): new helper function

	* conf/autofs/autofs_linux.h: added definition for autofs_data_t

	* conf/autofs/autofs_solaris_v2_v3.h: ditto

	* amd/map.c (init_map): initialize am_autofs_data
	(free_map): call the autofs cleanup function if necessary

	* include/am_utils.h (am_node): added private data and cleanup
	function for autofs

	* tasks: removed some obsolete entries

2001-08-11  Erez Zadok  <ezk@a-solaris8.fsl.cs.sunysb.edu>

	* amd/map.c (free_map_if_success): run autofs_umount_failed() only
	if this mount node is of type autofs.

2001-08-11  Ion Badulescu  <lionut@gonzales.badula.org>

	* amd/amd.h: removed mf_array from struct continuation (moved into
	am_node)

	* include/am_utils.h: removed VLOOK_LOOKUP; renamed vlookuppn to
	vlookup_child; added vmount_child; added mount_child to the fs_ops
	API; added prototypes for amfs_auto_mount_child and
	amfs_error_mount_child

	* amd/map.c (init_map): initialize am_mfarray to 0

	* amd/amfs_*, amd/ops_*: new API function mount_child, old API
	function lookuppn renamed to lookup_child

	* amd/amfs_auto.c: renamed amfs_auto_lookuppn1 to
	amfs_auto_lookup_node; renamed amfs_auto_lookuppn2 to
	amfs_auto_lookup_mntfs; renamed amfs_auto_lookuppn3 to
	amfs_auto_mount_child; moved the freeing of the error mntfs in the
	newly allocated am_node from lookup_mntfs to mount_child; make
	sure lookup_child returns a negative error if the node needs to be
	mounted; removed the call to lookuppn3 from lookup_child
