@@ -1,3 +1,11 @@
+2001-08-13  Erez Zadok  <ezk@fsl-gw.fsl.cs.sunysb.edu>
+
+	* doc/am-utils.texi (in_network Selector Variable): document
+	expanded syntax
+
+	* libamu/wire.c (is_network_member): support for network/netmask
+	as well as network/bits syntax in in_network()
+
 2001-08-11  Erez Zadok  <ezk@a-linux64.fsl.cs.sunysb.edu>
 
 	* amq/amq.c (show_mti): print full four digits for year, and print
